# bridge-cli

./: .dockerignore  .gitignore  README.md  generate_dataset.py  pyproject.toml  spring-boot-dataset.jsonl
.github/workflows/: build-training-image.yml  test.yml
config/: axolotl-config.yaml
datasets/: spring-boot-dataset.jsonl
docker/: Dockerfile  setup.sh  train.sh
scripts/: generate_dataset.py  generate_react_dataset.py  publish_model.py  scrub_secrets.py  test_model.py
tests/: conftest.py  test_generate_dataset.py  test_generate_react_dataset.py  test_publish_model.py  test_scrub_secrets.py  test_test_model.py
